<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_baseline_local_fire_department_24"
        android:orderInCategory="1"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="2"
        android:title="@string/search" />

    <item
        android:id="@+id/menu_block"
        android:orderInCategory="2"
        android:title="@string/search" />

    <item
        android:id="@+id/menu_wish_list"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:orderInCategory="3"
        android:title="@string/wish_list" />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:orderInCategory="4"
        android:title="@string/profile" />

</menu>