<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.canytech.supermercado.ui.fragments.ProductsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.canytech.supermercado.ui.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.canytech.supermercado.ui.fragments.WishListFragment"
        android:label="@string/title_wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.canytech.supermercado.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>