<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.activities.UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/shape_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/imageView"
                app:layout_constraintTop_toTopOf="@id/imageView" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_fragment_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/text_view_fragment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/name"
                android:textColor="@color/black2"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/profile_fragment_image"
                app:layout_constraintStart_toStartOf="@id/profile_fragment_image"
                app:layout_constraintTop_toBottomOf="@id/profile_fragment_image" />

            <TextView
                android:id="@+id/txt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/gender"
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_fragment_name" />

            <TextView
                android:id="@+id/text_view_fragment_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/male"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/txt_gender"
                app:layout_constraintTop_toTopOf="@id/txt_gender" />


            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/email"
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_fragment_gender" />

            <TextView
                android:id="@+id/text_view_fragment_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/email_address"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/txt_email"
                app:layout_constraintTop_toTopOf="@id/txt_email" />

            <TextView
                android:id="@+id/txt_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/number"
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_email" />

            <TextView
                android:id="@+id/text_view_fragment_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/mobile_number"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/txt_number"
                app:layout_constraintTop_toTopOf="@id/txt_number" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/address"
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_number" />

            <TextView
                android:id="@+id/text_view_fragment_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/address"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/txt_address"
                app:layout_constraintTop_toTopOf="@id/txt_address" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>