<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.activities.UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_settings_activity"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:paddingStart="15dp"
                android:elevation="4dp"
                app:titleTextColor="@color/no_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/shape_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/title_settings"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/imageView"
                app:layout_constraintTop_toTopOf="@id/imageView" />

            <ImageView
                android:id="@+id/text_view_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintBottom_toBottomOf="@id/text_view_settings_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_view_settings_name" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/text_view_settings_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/name"
                android:textColor="@color/black2"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/profile_image"
                app:layout_constraintEnd_toEndOf="@id/profile_image"
                app:layout_constraintTop_toBottomOf="@id/profile_image" />

            <TextView
                android:id="@+id/txt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/gender"
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_settings_name" />

            <TextView
                android:id="@+id/text_view_settings_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/male"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/txt_gender"
                app:layout_constraintTop_toTopOf="@id/txt_gender" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/email"
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_gender" />

            <TextView
                android:id="@+id/text_view_settings_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/email_address"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/txt_email"
                app:layout_constraintTop_toTopOf="@id/txt_email" />

            <TextView
                android:id="@+id/txt_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/number"
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_email" />

            <TextView
                android:id="@+id/text_view_settings_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/mobile_number"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/txt_number"
                app:layout_constraintTop_toTopOf="@id/txt_number" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/address"
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_number" />

            <TextView
                android:id="@+id/text_view_settings_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/address"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/txt_address"
                app:layout_constraintTop_toTopOf="@id/txt_address" />

            <LinearLayout
                android:id="@+id/LinearLayout_settings_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_settings_address">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/addresses"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_settings_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/montserrat_medium"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LinearLayout_settings_address" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>