<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/item_bg"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:background="@drawable/bg_poster"
        android:backgroundTint="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/info_item_product"
        android:layout_width="0dp"
        android:layout_margin="7dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/bg_poster"
        app:layout_constraintTop_toTopOf="@id/item_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/item_bg"/>


    <ImageView
        android:id="@+id/img_product"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/info_item_product"
        app:layout_constraintStart_toStartOf="@id/info_item_product"
        app:layout_constraintEnd_toEndOf="@id/info_item_product"
        app:layout_constraintBottom_toBottomOf="@id/info_item_product"
        android:padding="10dp"
        android:src="@drawable/bananana"/>

    <TextView
        android:id="@+id/title_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/example_item"
        app:layout_constraintTop_toBottomOf="@id/img_product"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/price_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/price"
        app:layout_constraintTop_toBottomOf="@id/title_product"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_unit_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/unit_um_kg"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="@id/item_bg"
        android:layout_marginBottom="5dp"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/item_bg"
        android:textAllCaps="false" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/item_bg"
        app:layout_constraintBottom_toBottomOf="@id/btn_unit_type"
        app:layout_constraintTop_toTopOf="@id/btn_unit_type"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="6dp"
        android:scaleType="centerCrop"
        android:background="@color/yellow"
        android:src="@drawable/ic_baseline_shopping_cart_24" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>